--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 "DEPLOY_STAGING": true,
-"DEPLOY_PRODUCTION": true,
+"DEPLOY_PRODUCTION": false,
 "CONFIRM_DEPLOY_PRODUCTION": true, 
 "CONFIRM_SWITCH_TRAFFIC": true, 
 "CONFIRMER": "automata"
