--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"DEPLOY_STAGING": false,
+"DEPLOY_STAGING": true,
 "DEPLOY_PRODUCTION": true,
 "CONFIRM_DEPLOY_PRODUCTION": true, 
 "CONFIRM_SWITCH_TRAFFIC": true, 
