--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 "DEPLOY_STAGING": true,
 "DEPLOY_PRODUCTION": true,
-"CONFIRM_DEPLOY_PRODUCTION": true, 
-"CONFIRM_SWITCH_TRAFFIC": true, 
+"CONFIRM_DEPLOY_PRODUCTION": false, 
+"CONFIRM_SWITCH_TRAFFIC": false, 
 "CONFIRMER": "automata"
 }
