--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
-"DEPLOY_STAGING": true,
-"DEPLOY_PRODUCTION": true,
-"CONFIRM_DEPLOY_PRODUCTION": true, 
-"CONFIRM_SWITCH_TRAFFIC": true, 
-"CONFIRMER": "automata"
+  "CONFIRM_BEGIN_DEPLOYMENT": true
+  "DEPLOY_STAGING": true,
+  "DEPLOY_PRODUCTION": true,
+  "CONFIRM_DEPLOY_PRODUCTION": true, 
+  "CONFIRM_SWITCH_TRAFFIC": true, 
+  "CONFIRMER": "automata"
 }
