--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "CONFIRM_BEGIN_DEPLOYMENT": true
+  "CONFIRM_BEGIN_DEPLOYMENT": true,
   "DEPLOY_STAGING": true,
   "DEPLOY_PRODUCTION": true,
   "CONFIRM_DEPLOY_PRODUCTION": true, 
