--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "CONFIRM_BEGIN_DEPLOYMENT": true,
-  "DEPLOY_STAGING": true,
+  "DEPLOY_STAGING": false,
   "DEPLOY_PRODUCTION": true,
-  "CONFIRM_DEPLOY_PRODUCTION": true, 
-  "CONFIRM_SWITCH_TRAFFIC": true, 
+  "CONFIRM_DEPLOY_PRODUCTION": false, 
+  "CONFIRM_SWITCH_TRAFFIC": false, 
   "CONFIRMER": "automata"
 }
