--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "CONFIRM_BEGIN_DEPLOYMENT": true,
-  "DEPLOY_STAGING": false,
+  "CONFIRM_BEGIN_DEPLOYMENT": false,
+  "DEPLOY_STAGING": true,
   "DEPLOY_PRODUCTION": true,
   "CONFIRM_DEPLOY_PRODUCTION": false, 
   "CONFIRM_SWITCH_TRAFFIC": false, 
