--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
-
-CONFIRM_BEGIN_DEPLOYMENT: false,
-DEPLOY_STAGING: true,
-DEPLOY_PRODUCTION: false,
-CONFIRM_DEPLOY_PRODUCTION: false, 
-CONFIRM_SWITCH_TRAFFIC: false, 
-CONFIRMER: "automata"
+{
+  "CONFIRM_BEGIN_DEPLOYMENT": false,
+  "DEPLOY_STAGING": true,
+  "DEPLOY_PRODUCTION": false,
+  "CONFIRM_DEPLOY_PRODUCTION": false, 
+  "CONFIRM_SWITCH_TRAFFIC": false, 
+  "CONFIRMER": "automata"
+}
