--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-CONFIRM_BEGIN_DEPLOYMENT: false
+CONFIRM_BEGIN_DEPLOYMENT: true
 DEPLOY_STAGING: true
 DEPLOY_PRODUCTION: true
-CONFIRM_DEPLOY_PRODUCTION: false
-CONFIRM_SWITCH_TRAFFIC: false
+CONFIRM_DEPLOY_PRODUCTION: true
+CONFIRM_SWITCH_TRAFFIC: true
 CONFIRMER: "jylipoti"
