--- a/config.yaml
+++ b/config.yaml
@@ -4,3 +4,7 @@ DEPLOY_PRODUCTION: true
 CONFIRM_DEPLOY_PRODUCTION: false
 CONFIRM_SWITCH_TRAFFIC: false
 CONFIRMER: "jylipoti"
+BR_1:
+  THIS_SHOULD_BE_NESTED_1: 1
+BR_2:
+  THIS_SHOULD_BE_NESTED_2: 2
