--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -1,6 +1,13 @@
-CONFIRM_BEGIN_DEPLOYMENT: false
-DEPLOY_STAGING: true
-DEPLOY_PRODUCTION: true
-CONFIRM_DEPLOY_PRODUCTION: false
-CONFIRM_SWITCH_TRAFFIC: false
-CONFIRMER: "jylipoti"
+DEPLOY:
+  CONFIRM-BEGIN: true
+  DEPLOY-STAGING: true
+  DEPLOY-PRODUCTION: true
+  CONFIRM-DEPLOY-PRODUCTION: false
+  CONFIRM-SWITCH-TRAFFIC: false
+  CONFIRMER: "jylipoti"
+SWITCH-TRAFFIC:
+  CONFIRM-BEGIN: true
+STATUS:
+  CONFIRM-BEGIN: false
+DECOMMISSION:
+  CONFIRM-BEGIN: true
