--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -1,7 +1,13 @@
-
-CONFIRM-BEGIN: true
-DEPLOY-STAGING: true
-DEPLOY-PRODUCTION: true
-CONFIRM-DEPLOY-PRODUCTION: false
-CONFIRM-SWITCH-TRAFFIC: false
-CONFIRMER: "jylipoti"
+DEPLOY:
+  CONFIRM-BEGIN: true
+  DEPLOY-STAGING: true
+  DEPLOY-PRODUCTION: true
+  CONFIRM-DEPLOY-PRODUCTION: false
+  CONFIRM-SWITCH-TRAFFIC: false
+  CONFIRMER: "jylipoti"
+SWITCH-TRAFFIC:
+  CONFIRM-BEGIN: true
+STATUS:
+  CONFIRM-BEGIN: false
+DECOMMISSION:
+  CONFIRM-BEGIN: true
