--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -2,8 +2,8 @@ DEPLOY:
   CONFIRM-BEGIN: true
   DEPLOY-STAGING: true
   DEPLOY-PRODUCTION: true
-  CONFIRM-DEPLOY-PRODUCTION: false
-  CONFIRM-SWITCH-TRAFFIC: false
+  CONFIRM-DEPLOY-PRODUCTION: true
+  CONFIRM-SWITCH-TRAFFIC: true
   CONFIRMER: "jylipoti"
 SWITCH-TRAFFIC:
   CONFIRM-BEGIN: true
