--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -1,3 +1,9 @@
+CONFIRM-BEGIN: true
+DEPLOY-STAGING: true
+DEPLOY-PRODUCTION: true
+CONFIRM-DEPLOY-PRODUCTION: true
+CONFIRM-SWITCH-TRAFFIC: true
+CONFIRMER: "jylipoti"
 DEPLOY:
   CONFIRM-BEGIN: true
   DEPLOY-STAGING: true
