--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -1,19 +1,13 @@
-CONFIRM-BEGIN: true
-DEPLOY-STAGING: true
-DEPLOY-PRODUCTION: true
-CONFIRM-DEPLOY-PRODUCTION: true
-CONFIRM-SWITCH-TRAFFIC: true
-CONFIRMER: "jylipoti"
 DEPLOY:
-  CONFIRM-BEGIN: true
-  DEPLOY-STAGING: true
-  DEPLOY-PRODUCTION: true
-  CONFIRM-DEPLOY-PRODUCTION: true
-  CONFIRM-SWITCH-TRAFFIC: true
+  CONFIRM_BEGIN: true
+  DEPLOY_STAGING: true
+  DEPLOY_PRODUCTION: true
+  CONFIRM_DEPLOY_PRODUCTION: true
+  CONFIRM_SWITCH_TRAFFIC: true
   CONFIRMER: "jylipoti"
-SWITCH-TRAFFIC:
-  CONFIRM-BEGIN: true
+SWITCH_TRAFFIC:
+  CONFIRM_BEGIN: true
 STATUS:
-  CONFIRM-BEGIN: false
+  CONFIRM_BEGIN: false
 DECOMMISSION:
-  CONFIRM-BEGIN: true
+  CONFIRM_BEGIN: true
