--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -5,6 +5,7 @@ DEPLOY:
   CONFIRM_DEPLOY_PRODUCTION: true
   CONFIRM_SWITCH_TRAFFIC: true
   CONFIRMER: "jylipoti"
+  CLOUDFORMATION_DEPLOY: true
 SWITCH_TRAFFIC:
   CONFIRM_BEGIN: true
 STATUS:
