--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,14 +1,14 @@
 DEPLOY:
-  CONFIRM_BEGIN: true
+  CONFIRM_BEGIN: false
   DEPLOY_STAGING: true
   DEPLOY_PRODUCTION: true
   CONFIRM_DEPLOY_PRODUCTION: true
   CONFIRM_SWITCH_TRAFFIC: true
   CONFIRMER: "jylipoti"
   CLOUDFORMATION_DEPLOY: true
-SWITCH-TRAFFIC:
-  CONFIRM_BEGIN: true
+SWITCH_TRAFFIC:
+  CONFIRM_SWITCH_TRAFFIC: true
 STATUS:
-  CONFIRM_BEGIN: false
+  PLACEHOLDER: 'foo'
 DECOMMISSION:
-  CONFIRM_BEGIN: true
+  PLACEHOLDER: 'foo'
