--- a/pipeline.yml
+++ b/pipeline.yml
@@ -6,7 +6,7 @@ DEPLOY:
   CONFIRM_SWITCH_TRAFFIC: true
   CONFIRMER: "jylipoti"
   CLOUDFORMATION_DEPLOY: true
-SWITCH_TRAFFIC:
+SWITCH-TRAFFIC:
   CONFIRM_SWITCH_TRAFFIC: true
 STATUS:
   PLACEHOLDER: 'foo'
